force-app/main/default/objects/Existing_competitor_machines__c/Existing_competitor_machines__c.object-meta.xml
<CustomObject>
    <description>Fill this field with existing machines from competitors</description>
    <label>Existing competitor machines</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Existing competitor machines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>