force-app/main/default/objects/Existing_competitor_machines__c/fields/Account_ric__c.field-meta.xml
<CustomField>
    <fullName>Account_ric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Existing competitor machines</relationshipLabel>
    <relationshipName>Existing_competitor_machines</relationshipName>
    <type>Lookup</type>
</CustomField>