force-app/main/default/objects/Existing_competitor_machines__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOMMEL</fullName>
                <color>#3333FF</color>
                <label>HOMMEL</label>
            </value>
            <value>
                <fullName>TESA</fullName>
                <color>#F3D904</color>
                <label>TESA</label>
            </value>
            <value>
                <fullName>Dr. SCHNEIDER</fullName>
                <color>#660000</color>
                <label>Dr. SCHNEIDER</label>
            </value>
            <value>
                <fullName>MAHR</fullName>
                <color>#FF0000</color>
                <label>MAHR</label>
            </value>
            <value>
                <fullName>MARPOSS</fullName>
                <color>#9999FF</color>
                <label>MARPOSS</label>
            </value>
            <value>
                <fullName>OTHERS</fullName>
                <color>#330033</color>
                <label>OTHERS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>