force-app/main/default/objects/Existing_competitor_machines__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Competitor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>C203</fullName>
            </value>
            <value>
                <fullName>C305</fullName>
            </value>
            <value>
                <fullName>C310</fullName>
            </value>
            <value>
                <fullName>C314</fullName>
            </value>
            <value>
                <fullName>C505</fullName>
            </value>
            <value>
                <fullName>C510</fullName>
            </value>
            <value>
                <fullName>C514</fullName>
            </value>
            <value>
                <fullName>C805</fullName>
            </value>
            <value>
                <fullName>C810</fullName>
            </value>
            <value>
                <fullName>C814</fullName>
            </value>
            <value>
                <fullName>C1014</fullName>
            </value>
            <value>
                <fullName>C1023</fullName>
            </value>
            <value>
                <fullName>CA605</fullName>
            </value>
            <value>
                <fullName>CA610</fullName>
            </value>
            <value>
                <fullName>CA614</fullName>
            </value>
            <value>
                <fullName>CA618</fullName>
            </value>
            <value>
                <fullName>Tesa Scan 52 (horizontal)</fullName>
            </value>
            <value>
                <fullName>Tesa Scan 25</fullName>
            </value>
            <value>
                <fullName>Tesa Scan 50</fullName>
            </value>
            <value>
                <fullName>Tesa Scan 50 Plus</fullName>
            </value>
            <value>
                <fullName>Mahr Shaft scope 350x80</fullName>
            </value>
            <value>
                <fullName>Mahr Shaft scope 350x120</fullName>
            </value>
            <value>
                <fullName>Mahr Shaft scope 750x80</fullName>
            </value>
            <value>
                <fullName>Mahr Shaft scope 750x120</fullName>
            </value>
            <value>
                <fullName>VMM100</fullName>
            </value>
            <value>
                <fullName>VMM300</fullName>
            </value>
            <value>
                <fullName>VMM600</fullName>
            </value>
            <value>
                <fullName>VMM1000</fullName>
            </value>
            <value>
                <fullName>VMM1200</fullName>
            </value>
            <value>
                <fullName>OPTOQUICK SET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>